--- a/code/html/index.html
+++ b/code/html/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <header class="Menubar">
-    <div class="home">Pawsville</div>
+    <a class="home" href="pawsvillevet.html">Pawsville</a>
     <div class="tool">
         <a class="tool1" href="">Register</a>
         <a class="tool1" href="">Login</a>
