--- a/code/html/pawsvillevet.html
+++ b/code/html/pawsvillevet.html
@@ -7,8 +7,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anaheim&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/563cbfa489.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/VetStyle.css" type="text/css"></link>
-    <script src="../javascript/VetJS.js"></script>
+    <link rel="stylesheet" href="../css/vetstyle.css" type="text/css"></link>
+    <script src="../javascript/vetjs.js"></script>
 </head>
 <body>
     <header>
@@ -40,7 +40,7 @@
     <div class="content">
         <div class="top-content">
             <div class="top-content-container">
-                <img src="../picture/Vet-PIcture.png" alt="vet-introduce-background">
+                <img src="/Pic/Vet-PIcture.png" alt="vet-introduce-background">
                 <button class="top-content-container-button">MAKE AN APPOINTMENT</button>
             </div>
             
@@ -170,7 +170,7 @@
                         <button class="advertise-button">LEARN MORE</button>
                     </div>
                     <div class="column-ad">
-                        <img src="../picture/header.jpg" alt="advertise-pic">
+                        <img src="/Pic/header.jpg" alt="advertise-pic">
                     </div>
                 </div>
             </div>
@@ -181,10 +181,10 @@
             <div class="sub-content-with-picture-container">
                 <div class="pic-row">
                     <div class="pic-column">
-                        <img src="../picture/golden-retriever-dog-getting-injection-with-vaccine-during-appointment-veterinary-clinic_156881-4847.jpg" alt="pic">
+                        <img src="/Pic/golden-retriever-dog-getting-injection-with-vaccine-during-appointment-veterinary-clinic_156881-4847.jpg" alt="pic">
                     </div>
                     <div class="pic-column">
-                        <img src="../picture/ear-examine-dog.webp" alt="pic">
+                        <img src="/Pic/ear-examine-dog.webp" alt="pic">
                     </div>
                     <div class="pic-column">
                         <img src="" alt="pic">
