--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </div>
 
 <header class="Menubar">
-    <a class="home" href="pawsvillevet.html">Pawsville</a>
+    <a class="home" href="code/html/pawsvillevet.html">Pawsville</a>
     <div class="tool">
         <a class="tool1" href="">Register</a>
         <a class="tool1" href="">Login</a>
