--- a/Vet1/pawsvillevet.html
+++ b/Vet1/pawsvillevet.html
@@ -40,7 +40,7 @@
     <div class="content">
         <div class="top-content">
             <div class="top-content-container">
-                <img src="/Pic/Vet-PIcture.png" alt="vet-introduce-background">
+                <img src="/Pic1/Vet-PIcture.png" alt="vet-introduce-background">
                 <button class="top-content-container-button">MAKE AN APPOINTMENT</button>
             </div>
             
@@ -170,21 +170,21 @@
                         <button class="advertise-button">LEARN MORE</button>
                     </div>
                     <div class="column-ad">
-                        <img src="/Pic/header.jpg" alt="advertise-pic">
+                        <img src="/Pic1/header.jpg" alt="advertise-pic">
                     </div>
                 </div>
             </div>
         </div>
-        <div class="sub-content-with-picture">
+        <div class="sub-content-with-Pic1ture">
             <h3>Lorem Ipsum</h3>
             <p>is simply dummy text of the printing and typesetting industry. </p>
             <div class="sub-content-with-picture-container">
                 <div class="pic-row">
                     <div class="pic-column">
-                        <img src="/Pic/golden-retriever-dog-getting-injection-with-vaccine-during-appointment-veterinary-clinic_156881-4847.jpg" alt="pic">
+                        <img src="/Pic1/golden-retriever-dog-getting-injection-with-vaccine-during-appointment-veterinary-clinic_156881-4847.jpg" alt="pic">
                     </div>
                     <div class="pic-column">
-                        <img src="/Pic/ear-examine-dog.webp" alt="pic">
+                        <img src="/Pic1/ear-examine-dog.webp" alt="pic">
                     </div>
                     <div class="pic-column">
                         <img src="" alt="pic">
