--- a/Vet1/pawsvillevet.html
+++ b/Vet1/pawsvillevet.html
@@ -7,8 +7,8 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Anaheim&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/563cbfa489.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/vetstyle.css" type="text/css"></link>
-    <script src="../javascript/vetjs.js"></script>
+    <link rel="stylesheet" href="vetstyle.css" type="text/css"></link>
+    <script src="vetjs.js"></script>
 </head>
 <body>
     <header>
