--- a/Vet1/pawsvillevet.html
+++ b/Vet1/pawsvillevet.html
@@ -20,8 +20,8 @@
     </header>
     <nav>
         <div class="navbar">
-            <a href="/index.html">Home</a>
-            <a class="subnav-button" href="">Lorem Ipsum</a>
+            <a href="">Home</a>
+            <a class="subnav-button" href="/index.html">Lorem Ipsum</a>
             
                 <!--
                     <div class="subnav-content">
@@ -175,7 +175,7 @@
                 </div>
             </div>
         </div>
-        <div class="sub-content-with-Pic1ture">
+        <div class="sub-content-with-picture">
             <h3>Lorem Ipsum</h3>
             <p>is simply dummy text of the printing and typesetting industry. </p>
             <div class="sub-content-with-picture-container">
