--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <header class="Menubar">
     <a class="home" href="Vet1/pawsvillevet.html">Pawsville</a>
     <div class="tool">
+        <a class="tool1" href="Studio2/studio.html">Studio2</a>
         <a class="tool1" href="Vet1/pawsvillevet.html">Ver1</a>
         <a class="tool1" href="Vet2/Vet2t.html">Ver2</a>
         <a class="tool1" href="">Register</a>
