--- a/Studio2/studio.html
+++ b/Studio2/studio.html
@@ -14,10 +14,10 @@
     <header>
         <div class="header-row">
             <div class="header-column-left">
-                <a href="/index.html">Home</a>
+                <a href="index.html">Home</a>
             </div>
             <div class="header-column-middle">
-                <a href="/index.html" class="logo">Pawsville</a>
+                <a href="index.html" class="logo">Pawsville</a>
             </div>
             <div class="header-column-right">
                 <a href="">Register</a>
