--- a/Vet2/Vet2t.html
+++ b/Vet2/Vet2t.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="Menubar">
-        <a class="home" href="Pawsville1/index.html">Pawsville</a>
+        <a class="home" href="/index.html">Pawsville</a>
         <div class="tool">
             <a class="tool1" href="">Register</a>
             <a class="tool1" href="">Login</a>
