add grid to part 4 and add smooth scroll to body and nav-intro-part

--- a/Grooming1/grooming.html
+++ b/Grooming1/grooming.html
@@ -87,10 +87,13 @@
         </div>
     </div>
     <div class="calendar-part">
-
+        calendar will add later
     </div>
     <div class="other-services-part">
-
+        <div class="service-item1">1</div>
+        <div class="service-item2">2</div>
+        <div class="service-item3">3</div>
+        <div class="service-item4">4</div>
     </div>
     <footer>
 
