part 4 grid and picture

--- a/Grooming1/grooming.html
+++ b/Grooming1/grooming.html
@@ -90,10 +90,30 @@
         calendar will add later
     </div>
     <div class="other-services-part">
-        <div class="service-item1">1</div>
-        <div class="service-item2">2</div>
-        <div class="service-item3">3</div>
-        <div class="service-item4">4</div>
+        <div class="service-item1">
+            <div class="card-service-item">
+                <h4>Hotel</h4>
+                <img src="../Grooming1/groomingpic/hotel.jpg" alt="">
+            </div>
+        </div>
+        <div class="service-item2">
+            <div class="card-service-item">
+                <h4>Cafe</h4>
+                <img src="../Grooming1/groomingpic/cafe.webp" alt="">
+            </div>
+        </div>
+        <div class="service-item3">
+            <div class="card-service-item">
+                <h4>Studio</h4>
+                <img src="../Grooming1/groomingpic/studio.jpg" alt="">
+            </div>
+        </div>
+        <div class="service-item4">
+            <div class="card-service-item">
+                <h4>Park</h4>
+                <img src="../Grooming1/groomingpic/park.jpeg" alt="">
+            </div>
+        </div>
     </div>
     <footer>
 
