change part 3 bg color and fix grid, part 5 fix grid and add hover

--- a/Grooming1/grooming.html
+++ b/Grooming1/grooming.html
@@ -60,14 +60,14 @@
         </div>
         <div class="item-5">
             <div class="item-container">
-                <h4>Spa</h4>
+                <h4>Nails Trimming</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error placeat velit officia eligendi libero ad voluptas soluta saepe provident repellat consectetur, aut voluptates officiis ipsa maxime sint ut voluptatem deserunt!</p>
                 <button class="item-button" onclick="">Reserve</button>
             </div>
         </div>
         <div class="item-6">
             <div class="item-container">
-                <h4>Spa</h4>
+                <h4>Hair Cut</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error placeat velit officia eligendi libero ad voluptas soluta saepe provident repellat consectetur, aut voluptates officiis ipsa maxime sint ut voluptatem deserunt!</p>
                 <button class="item-button" onclick="">Reserve</button>
             </div>
@@ -77,7 +77,7 @@
         </div>
         <div class="item-8">
             <div class="item-container">
-                <h4>Spa</h4>
+                <h4>Bath</h4>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error placeat velit officia eligendi libero ad voluptas soluta saepe provident repellat consectetur, aut voluptates officiis ipsa maxime sint ut voluptatem deserunt!</p>
                 <button class="item-button" onclick="">Reserve</button>
             </div>
@@ -92,26 +92,34 @@
     <div class="other-services-part">
         <div class="service-item1">
             <div class="card-service-item">
-                <h4>Hotel</h4>
-                <img src="../Grooming1/groomingpic/hotel.jpg" alt="">
+                <img src="../Grooming1/groomingpic/hotel.jpg" alt="" class="image">
+                <div class="overlay">
+                    <h4>Hotel</h4>
+                </div>
             </div>
         </div>
         <div class="service-item2">
             <div class="card-service-item">
-                <h4>Cafe</h4>
-                <img src="../Grooming1/groomingpic/cafe.webp" alt="">
+                <img src="../Grooming1/groomingpic/cafe.webp" alt="" class="image">
+                <div class="overlay">
+                    <h4>Cafe</h4>
+                </div>
             </div>
         </div>
         <div class="service-item3">
             <div class="card-service-item">
-                <h4>Studio</h4>
-                <img src="../Grooming1/groomingpic/studio.jpg" alt="">
+                <img src="../Grooming1/groomingpic/studio.jpg" alt="" class="image">
+                <div class="overlay">
+                    <h4>Studio</h4>
+                </div>
             </div>
         </div>
         <div class="service-item4">
             <div class="card-service-item">
-                <h4>Park</h4>
-                <img src="../Grooming1/groomingpic/park.jpeg" alt="">
+                <img src="../Grooming1/groomingpic/park.jpeg" alt="" class="image">
+                <div class="overlay">
+                    <h4>Park</h4>
+                </div>
             </div>
         </div>
     </div>
