--- a/Grooming1/grooming.html
+++ b/Grooming1/grooming.html
@@ -124,7 +124,19 @@
         </div>
     </div>
     <footer>
-
+        <div class="footer">
+            <div class="row">
+                <div class="column">
+                    contact
+                </div>
+                <div class="column">
+                    help
+                </div>
+                <div class="column">
+                    location
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
