done the responsive but the phone size one not working properly

--- a/Studio2/studio.html
+++ b/Studio2/studio.html
@@ -44,19 +44,18 @@
                 </div>
             </div>
         <div class="item2">
-                <div class="picture container">
+                <div class="picture-container">
                     <div class="black-opacity-background"></div>
                     <img src="../Studio2/studiopic/Pic2.jpg" alt="">
-                </div>
-                <div class="bottom-right-text">
-                    <h1>PawsVille Studio</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
-                    <a href="" class="start-button">Start Now</a>
+                    <div class="bottom-right-text">
+                        <h1>PawsVille Studio</h1>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries</p>
+                        <a href="" class="start-button">Start Now</a>
+                    </div>
                 </div>
         </div>
         <div class="item3">
             <div class="right-container">
-
                 <div class="row-item">
                     <div class="row">
                         <p>P</p>
