Add Fix Responsive Studio

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a class="tool1" href="Studio2/studio.html">Studio2</a>
         <a class="tool1" href="Vet1/pawsvillevet.html">Ver1</a>
         <a class="tool1" href="Vet2/Vet2t.html">Ver2</a>
+        <a class="tool1" href="Grooming1/grooming.html">Grooming</a>
         <a class="tool1" href="">Register</a>
         <a class="tool1" href="">Login</a>
     </div>
